5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4326/executions/1602_825.log
== SUBMITION (2019-03-31 16:03:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r=float(input("Insira o valor para o raio no circulo:"))
area=pi*(r**2)
print(round(area,3))
volume=4/3*pi*(r**3)
print(round(volume,3))
-- EXECUTION TIME:
0.207329
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/825/main.py", line 5, in <module>
    area=pi*(r**2)
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:04:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r=float(input("Insira o valor para o raio do circulo:"))
area=pi*(r**2)
print(round(area,3))
volume=4/3*pi*(r**3)
print(round(volume,3))
-- EXECUTION TIME:
0.140245
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/825/main.py", line 5, in <module>
    area=pi*(r**2)
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:04:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r=float(input("Insira o valor para o raio do circulo:"))
area=pi*(r**2)
print(round(area,3))
volume=4/3*pi*(r**3)
print(round(volume,3))
-- EXECUTION TIME:
0.175974
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/825/main.py", line 5, in <module>
    area=pi*(r**2)
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 16:05:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r=float(input("Insira o valor para o raio do circulo:"))
area=pi*(r**2)
print(round(area,3))
volume=4/3*pi*(r**3)
print(round(volume,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    area=pi*(r**2)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:06:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r=float(input("Insira o valor para o raio do circulo:"))
area=math*(r**2)
print(round(area,3))
volume=4/3*math*(r**3)
print(round(volume,3))
-- EXECUTION TIME:
0.162321
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/825/main.py", line 5, in <module>
    area=math*(r**2)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:07:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r=float(input("Insira o valor para o raio do circulo:"))
from math import pi
area=pi*(r**2)
print(round(area,3))
volume=4/3*pi*(r**3)
print(round(volume,3))
-- EXECUTION TIME:
0.154573
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
